# bad-rally-analyzer

./: .gitignore  AGENTS.md  README.md  index.html  pyproject.toml
docs/: directory-structure.md
scripts/: update_directory_structure.py
src/: app.py  main.py
src/audio/: __init__.py  audio_extractor.py  shot_counter.py
src/gemini/: __init__.py  analyzer.py  schemas.py
src/opencv/: __init__.py  motion_score.py  plot.py  rally_detector.py  video_loader.py
src/pipeline/: __init__.py  opencv_audio.py
src/prompts/: __init__.py  badminton_rally_prompt.py
src/schemas/: __init__.py  result_schema.py
tests/: test_rally_detector.py  test_shot_counter.py
