[project]
name = "bad-rally-analyzer"
version = "0.1.0"
description = "PoC for badminton rally analysis with Gemini and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.16.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
