[project]
name = "bad-rally-analyzer"
version = "0.1.0"
description = "PoC for badminton rally analysis with Gemini and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.16.1",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
